--- a/guides/source/layout.html.erb
+++ b/guides/source/layout.html.erb
@@ -9,11 +9,15 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/syntaxhighlighter/shCore.css" data-turbolinks-track="reload">
   <link rel="stylesheet" type="text/css" href="stylesheets/syntaxhighlighter/shThemeRailsGuides.css" data-turbolinks-track="reload">
   <link rel="stylesheet" type="text/css" href="stylesheets/fixes.css" data-turbolinks-track="reload">
+  <link rel="stylesheet" type="text/css" href="stylesheets/search.css" data-turbolinks-track="reload">
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <script src="javascripts/syntaxhighlighter.js" data-turbolinks-track="reload"></script>
   <script src="javascripts/turbolinks.js" data-turbolinks-track="reload"></script>
   <script src="javascripts/guides.js" data-turbolinks-track="reload"></script>
   <script src="javascripts/responsive-tables.js" data-turbolinks-track="reload"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.4.4/fuse.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="javascripts/search.js" data-turbolinks-track="reload"></script>
   <meta property="og:title" content="<%= yield(:page_title) %>" />
   <meta name="description" content="<%= yield(:description) %>" />
   <meta property="og:description" content="<%= yield(:description) %>" />
@@ -47,6 +51,13 @@
     <div class="wrapper clearfix">
       <h1><a href="index.html" title="Return to home page">Guides.rubyonrails.org</a></h1>
       <ul class="nav">
+        <li>
+          <input type="search" class="search-box" name="q" aria-label="Search through site content" placeholder="Search...">
+          <div class="results-container">
+            <ul class="results">
+            </ul>
+          </div>
+        </li>
         <li><a class="nav-item" href="index.html">Home</a></li>
         <li class="guides-index guides-index-large">
           <a href="index.html" id="guidesMenu" class="guides-index-item nav-item">Guides Index</a>
